# EPC

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.api  Dockerfile.streamlit  Makefile  README.md  api.py  app.py  config.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: data_dictionary.md  model_card_template.md
notebooks/: 01_api_download.ipynb  o1_eDA notebook.ipynb  o2_eda.ipynb  report_chapter 4.ipynb
scripts/pipeline/: __init__.py  build_features.py  clean_epc.py  epc_download_merge.py  epc_download_merge_fast.py  policy.py  quality_report.py  report_eda.py  run_did.py  run_report.py  schemas.py  train_models.py  validate_data.py
src/ew_housing_energy_impact/: __init__.py  __main__.py  cli.py  logging_utils.py  manifest.py  paths.py  registry.py  validation.py
src/ew_housing_energy_impact.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: conftest.py  test_policy.py  test_validation.py
